# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This daemon contains the SOME/IP communication stack and is QM
"""

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")

exports_files(["etc/mw_com_config.json"])

# ============================================================================
# Main Binary
# ============================================================================
cc_binary(
    name = "someipd",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":local_network_service",
        ":remote_network_service",
        ":routing",
        "//score/config:config_flatbuffers",
        "//score/gateway_ipc_binding",
        "//score/socom",
        "@score_baselibs//score/filesystem",
        "@score_baselibs//score/mw/log",
        "@score_communication//score/message_passing",
        "@score_communication//score/mw/com",
    ],
)

# ============================================================================
# Libraries
# ============================================================================
cc_library(
    name = "local_network_service",
    srcs = ["local_network_service.cpp"],
    hdrs = ["local_network_service.h"],
    deps = [
        "//score/common",
        "//score/config:config_flatbuffers",
        "//score/socom",
        "@score_baselibs//score/mw/log",
        "@vsomeip",
    ],
)

cc_library(
    name = "remote_network_service",
    srcs = ["remote_network_service.cpp"],
    hdrs = ["remote_network_service.h"],
    deps = [
        "//score/common",
        "//score/config:config_flatbuffers",
        "//score/socom",
        "@score_baselibs//score/mw/log",
        "@vsomeip",
    ],
)

cc_library(
    name = "routing",
    srcs = ["routing.cpp"],
    hdrs = ["routing.h"],
    deps = [
        "//score/common",
        "//score/config:config_flatbuffers",
        "@score_baselibs//score/language/futurecpp",
        "@score_baselibs//score/mw/log",
        "@score_baselibs//score/result",
        "@score_communication//score/mw/com",
        "@vsomeip",
    ],
)

# ============================================================================
# Configuration Validation
# ============================================================================
validate_json_schema_test(
    name = "mw_com_config_schema_valid",
    size = "small",
    json = "etc/mw_com_config.json",
    schema = "@score_communication//score/mw/com:config_schema",
    tags = ["lint"],
)

native_binary(
    name = "someipd_example",
    src = "//score/someipd",
    args = [
        "--configuration",
        "$(rootpath //score/config:config_file)",
        "--service_instance_manifest",
        "$(rootpath etc/mw_com_config.json)",
    ],
    data = [
        "etc/mw_com_config.json",
        "//score/config:config_file",
    ],
)
