# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
Common types and constants shared across the SOME/IP gateway components.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "common",
    hdrs = [
        "include/score/someip/constants.h",
        "include/score/someip/types.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [":someip_error"],
)

cc_library(
    name = "someip_error",
    srcs = ["src/someip_error.cpp"],
    hdrs = ["include/score/someip/someip_error.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["@score_baselibs//score/result"],
)
