# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@flatbuffers//:build_defs.bzl", "flatbuffer_cc_library")
load("@score_someip_gateway//bazel/tools:someip_config.bzl", "generate_someip_config_bin")

exports_files(
    [
        "mw_someip_config.fbs",
        "mw_someip_config.json",
        "mw_someip_config.schema.json",
    ],
)

flatbuffer_cc_library(
    name = "config_flatbuffers",
    srcs = ["mw_someip_config.fbs"],
    visibility = ["//visibility:public"],
)

generate_someip_config_bin(
    name = "config_file",
    json = "mw_someip_config.json",
    output = "mw_someip_config.bin",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "config_schema",
    srcs = ["mw_someip_config.schema.json"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "config_schema.generate",
    srcs = ["mw_someip_config.fbs"],
    outs = ["mw_someip_config.generated.schema.json"],
    cmd = "$(location @flatbuffers//:flatc) --jsonschema -o $(@D) $(SRCS) && mv $(@D)/mw_someip_config.schema.json $@",
    tools = ["@flatbuffers//:flatc"],
    visibility = ["//visibility:public"],
)
