# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This daemon is a gateway between the SCORE middleware and the SOME/IP communication stack.
"""

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")

exports_files(
    [
        "etc/mw_com_config.json",
    ],
)

cc_binary(
    name = "gatewayd",
    srcs = ["main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":local_service_instance",
        ":remote_service_instance",
        "//src/config:config_flatbuffers",
        "//src/gateway_ipc_binding",
        "//src/serializer",
        "//src/socom",
        "@score_baselibs//score/filesystem",
        "@score_baselibs//score/mw/log",
        "@score_communication//score/message_passing",
        "@score_communication//score/mw/com",
    ],
)

cc_library(
    name = "local_service_instance",
    srcs = ["local_service_instance.cpp"],
    hdrs = ["local_service_instance.h"],
    deps = [
        "//src/common",
        "//src/config:config_flatbuffers",
        "//src/serializer",
        "//src/socom",
        "@score_baselibs//score/mw/log",
        "@score_communication//score/mw/com",
    ],
)

cc_library(
    name = "remote_service_instance",
    srcs = ["remote_service_instance.cpp"],
    hdrs = ["remote_service_instance.h"],
    deps = [
        "//src/common",
        "//src/config:config_flatbuffers",
        "//src/serializer",
        "//src/socom",
        "@score_baselibs//score/containers:non_relocatable_vector",
        "@score_baselibs//score/mw/log",
        "@score_communication//score/mw/com",
    ],
)

validate_json_schema_test(
    name = "mw_com_config_schema_valid",
    size = "small",
    json = "etc/mw_com_config.json",
    schema = "@score_communication//score/mw/com:config_schema",
    tags = ["lint"],
)

native_binary(
    name = "gatewayd_example",
    src = "//src/gatewayd",
    args = [
        "--configuration",
        "$(rootpath //src/config:config_file)",
        "--service_instance_manifest",
        "$(rootpath etc/mw_com_config.json)",
    ],
    data = [
        "etc/mw_com_config.json",
        "//src/config:config_file",
        "//src/serializer:null_serializer",
    ],
)
