# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
Integration Tests
"""

load("@bazel_tools_python//quality:defs.bzl", "py_pytest")

py_pytest(
    name = "integration",
    size = "medium",
    srcs = glob(["test_*.py"]) + ["conftest.py"],
    data = ["vsomeip-local.json"],
    # Restrict the test execution to Linux for the moment due to dependency on Python
    target_compatible_with = ["@platforms//os:linux"],
    deps = [
        "//score/someipd",
        "@score_someip_gateway_pip//pytest",
        "@score_someip_gateway_pip//someip",
    ],
)
