# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "config_schema.update",
    check_that_out_file_exists = False,
    files = {
        "//src/config:mw_someip_config.schema.json": "//src/config:config_schema.generate",
    },
)
